# av_preprocessing

./: .gitignore  README.md  download_and_preprocess_grid.sh  pyproject.toml
3DDFA_V2/: build.sh
3DDFA_V2/FaceBoxes/: build_cpu_nms.sh
3DDFA_V2/FaceBoxes/utils/nms/: cpu_nms.pyx
3DDFA_V2/Sim3DR/: build_sim3dr.sh
scripts/: download_grid.sh  extract_avhubert_feats_from_a_dataset.py  extract_landmarks_from_a_dataset.py  extract_rois_from_a_dataset.py  resample_audio_dataset.py  setup_3ddfa.sh  setup_avhubert.sh  test_av_hubert_installation.py
src/av_preprocessing/: __init__.py  av_hubert.py  ffmpeg.py  functionals.py  paths.py  torch_datasets.py
