[project]
name = "av-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Montesinos", email = "juan.montesinos@csem.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse",
    "cython",
    "fire",
    "imageio",
    "imageio-ffmpeg",
    "matplotlib",
    "numpy>=2",
    "onnx",
    "onnxruntime",
    "opencv-python",
    "polars>=1.32.3",
    "pyyaml",
    "scikit-image",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
line-length = 120

[tool.pyrefly]
search_path = ["3DDFA_V2"]
